# CGROOT

./: .gitignore  BUILD_INSTRUCTIONS.md  CGROOT_Manager.bat  CMakeLists.txt  FIXES_SUMMARY.md  GUI_BUILD_GUIDE.md  PROJECT_STRUCTURE.md  Project_Documentation.txt  Project_Documentation__Implementation_Details___Part.docx  README.md  REORGANIZATION_SUMMARY.md  build_err.txt  requirements.txt
docs/: DOCUMENTATION.md  gui_analysis_report.md  gui_analysis_report2.md  user_guide.md
examples/: .gitignore  readme.txt  simple_test.cpp  xor_solver.cpp
scripts/: CGROOT_Manager.bat  CGROOT_Manager.py  convert_cifar_to_idx.py  generate_samples.py  package_app.py  test_binding.py  verify_pyqt6.py
src/: CMakeLists.txt  demo  main.cpp
src/autograd/: graph.cpp  graph.h  op_nodes.cpp  op_nodes.h  readme.txt
src/autograd/ops/: readme.txt
src/bindings/: bindings.cpp
src/core/: definitions.h  model.cpp  model.h  parameter.h  readme.txt  shape.h  store_and_load.cpp  tensor.cpp  tensor.h
src/core/Initialization/: initialization.cpp  initialization.h
src/core/activation/: activation.cpp  activation.h
src/core/activations/: relu.h  sigmoid.h  softmax.h  tanh.h
src/core/layers/: ActivationLayer.cpp  conv2d.cpp  convLayer.cpp  dense.cpp  dense.h  dropout.h  flatten.cpp  fullyConnected.cpp  inputLayer.cpp  layer.cpp  layers.h  outputLayer.cpp  pooling.cpp  poolingLayer.cpp
src/core/losses/: binary_crossentropy.h  categorical_crossentropy.h  mse.h
src/core/math/: readme.txt
src/core/optimizers/: adam.h  momentum.h  optimizer.cpp  optimizer.h  sgd.h
src/core/utils/: data_utils.cpp  metrics.h  mnist_loader.cpp  mnist_loader.h  store_and_load.cpp  store_and_load.h  weight_init.h
src/cpp/: main.cpp
src/data/: .gitignore  data_utils.cpp  data_utils.h
src/data/configurations/: config_2025-12-16_16-57-53.json  config_2025-12-17_08-14-55.json  config_2025-12-17_08-18-51.json
src/data/datasets/cifar-10/: .gitignore
src/data/trained-model/: model_config.json
src/data/trained-model/Best_CIPHAR_10_Model_so_far/: model_config_20251223_222823.json
src/data/trained-model/Best_MNIST_Model_so_far/: model_config_20251223_144940.json
src/data/trained-model/mnist-trained-model/: model_config_20251216_214601.json  model_config_20251216_223526.json  model_config_20251217_072449.json
src/examples/: CMakeLists.txt  readme.txt  simple_test.cpp  xor_solver.cpp
src/gui/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  metatypes.h
src/gui/controllers/: modelcontroller.cpp  modelcontroller.h  modelworker.cpp  modelworker.h
src/gui/widgets/: configurationwidget.cpp  configurationwidget.h  imageviewerwidget.cpp  imageviewerwidget.h  inferencewidget.cpp  inferencewidget.h  metricswidget.cpp  metricswidget.h  trainingwidget.cpp  trainingwidget.h
src/gui_py/: dark_theme.py  dataset_utils.py  main.py  mainwindow.py  user_guide.md
src/gui_py/controllers/: model_controller.py  model_worker.py
src/gui_py/utils/: __init__.py  custom_loader.py  paths.py  resource_path.py  visualization_manager.py
src/gui_py/widgets/: configurationwidget.py  confusion_matrix.py  imageviewerwidget.py  inferencewidget.py  metricswidget.py  spinner.py  trainingwidget.py
src/gui_py/workers/: loader_thread.py  testing_thread.py  training_thread.py
src/layers/: ActivationLayer.cpp  convLayer.cpp  inputLayer.cpp  layer.cpp  layers.h  outputLayer.cpp
src/math/: .gitignore  cpu_kernels.cpp  cpu_kernels.h  matrix_ops.cpp  matrix_ops.h
src/model/: model.cpp  model.h
src/nn/: conv2d.h  cross_entropy_loss.h  linear.h  module.h  mse_loss.h  readme.txt  relu.h  sequential.h  sigmoid.h
src/nn/activations/: readme.txt
src/nn/layers/: readme.txt
src/nn/loss/: readme.txt
src/optim/: adam.h  readme.txt  sgd.h
src/optimization/: adam.cpp  adam.h  optimizer.h
tests/: CMakeLists.txt  readme.txt  test_autograd.cpp  test_diagnostics.cpp  test_matrices_operations.cpp  test_matrices_operations.md  test_metrics_axis.py  test_refactor.py  test_tensor.cpp  test_training_inference.cpp
